Se completo la seccion de contacto

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -19,8 +19,15 @@
         </nav>
     </header>
 
-    <main>
-        
-    </main>
+    <section>
+        <h1>Contactanos</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe ratione error cupiditate veritatis a neque, placeat nisi optio nemo provident nihil amet eligendi unde quisquam ipsum labore! Sint, quaerat error?</p>
+        <form action="">
+            <input type="text" placeholder="Nombre">
+            <input type="text" placeholder="Apellido">
+            <input type="email" placeholder="Email">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
+            <button>Enviar</button>
+    </section>
 </body>
 </html>
