--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <nav>
             <ul>
                 <li><a href="html/sobre-nosotros.html">Sobre Nosotros</a></li>
-                <li><a href="#">Testimonios</a></li>
-                <li><a href="#">Catalogo</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="html/testimonios.html">Testimonios</a></li>
+                <li><a href="html/catalogo.html">Catalogo</a></li>
+                <li><a href="html/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
