--- a/html/catalogo.html
+++ b/html/catalogo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <section><p><img src="img/logo.png" alt="logo">logo</p></section>
+        <section><a href="../index.html"><img src="../img/logo.png" alt="logo">inicio</a></section>
         <nav>
             <ul>
                 <li><a href="sobre-nosotros.html">Sobre Nosotros</a></li>
