--- a/html/testimonios.html
+++ b/html/testimonios.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <section><p><img src="img/logo.png" alt="logo">logo</p></section>
+        <section><a href="../index.html"><img src="../img/logo.png" alt="logo">inicio</a></section>
         <nav>
             <ul>
                 <li><a href="sobre-nosotros.html">Sobre Nosotros</a></li>
@@ -19,8 +19,11 @@
         </nav>
     </header>
 
-    <main>
-        
+    <main class="testimonio">
+        <h1>Testimonios</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quidem, tenetur doloribus accusantium esse nam molestias laudantium officia earum aperiam ex ut libero dolore mollitia laborum pariatur odio ullam unde?</p>
+        <img src="../img/testimonios.png" alt="testimonio">
+        <p>nombre y apellido</p>
     </main>
 </body>
 </html>
