--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <section><p><img src="img/logo.png" alt="logo">logo</p></section>
+        <section><a href="#"><img src="img/logo.png" alt="logo">logo</a></section>
         <nav>
             <ul>
                 <li><a href="html/sobre-nosotros.html">Sobre Nosotros</a></li>
@@ -23,8 +23,9 @@
         <div class="principal">
             <h1>Nombre de la empresa</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ad ab labore hic, harum nesciunt fuga accusamus alias, adipisci aut quas, suscipit incidunt porro. Accusamus eius dignissimos est iure facilis.</p>
-            <button>Comprar</button>
-            <button>Ver Detalles</button>
+            <div class="botones"><button>Comprar</button>
+                <button>Ver Detalles</button></div>
+            
         </div>
         <div>
             <img src="img/imagen.png" alt="imagen">
